<resources>
    <string name="app_name">UpGradAssignment</string>
    <string name="action_settings">Settings</string>
    <string name="retry">Retry</string>
    <string name="action_sort">sort</string>
    <string name="overview">Overview</string>
    <string name="dialog_sort">Sort by</string>

    <string-array name="sort_type">
        <item>Popularity</item>
        <item>Highest Rated</item>
    </string-array>
</resources>
